CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (CMAKE_VERBOSE_MAKEFILE OFF)
SET (CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")

PROJECT (transmitter)
ENABLE_LANGUAGE (ASM-ATT)

INCLUDE_DIRECTORIES("src/")

ADD_DEFINITIONS (-DF_CPU=20000000UL)
ADD_DEFINITIONS (-DWITH_DEBUG=1)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf
        "src/main.cc"
)

#FIND_PROGRAM (AVRDUDE avrdude)
#ADD_CUSTOM_TARGET("upload" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${AVRDUDE} -pm2560 -cusbasp -U "flash:w:${CMAKE_PROJECT_NAME}.elf:e")
ADD_CUSTOM_TARGET (${CMAKE_PROJECT_NAME}.hex ALL DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex)

